Downgraded to Sesame 2.6.8